2-multi-istio/gateways.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: knative-ingress-gateway
    namespace: knative-serving
  spec:
    selector:
      knative: ingressgateway
    servers:
    - hosts:
      - '*'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: wildcard-certs
        mode: SIMPLE
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: knative-local-gateway
    namespace: knative-serving
  spec:
    selector:
      knative: ingressgateway
    servers:
    - hosts:
      - '*'
      port:
        name: http
        number: 8081
        protocol: HTTP
kind: List
metadata:
  resourceVersion: ""
